@@ -2,9 +2,26 @@
 /**
  * Author archive page
  * 
- * @ Theme: Manduca - focus on accessibility
  * @ Since 1.0
  **/
+/*  This file is part of WordPress theme named Manduca - focus on accessibility.
+ *
+	Copyright (C) 2015-2018  Zsolt Edelényi (ezs@web25.hu)
+	Source code is available at https://github.com/batyuvitez/manduca
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.
+*/
 ?>
 
 <?php get_header() ?>
@@ -13,10 +30,7 @@
 			
 			<header>
 				<h1  tabindex="0">
-				<?php
-					printf( __( 'Author: %s', 'manduca' ),
-						   '<span class="vcard"><a class="url fn n" href="' . esc_url( get_author_posts_url( get_the_author_meta( 'ID' ) ) ) . '" >' . get_the_author() . '</a></span>' );
-				?>
+				<?php printf( __( 'Post of %s', 'manduca' ), get_the_author() ); ?>
 				</h1>
 				
 			</header>
