@@ -11,6 +11,7 @@
  /*  This file is part of WordPress theme named Manduca - focus on accessibility.
  *
 	Copyright (C) 2015-2019  Zsolt Edelényi (ezs@web25.hu)
+	Source code is available at https://github.com/batyuvitez/manduca
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
